--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "BitterSweet.io Website API",
   "scripts": {
-    "start": "micro index.js"
+    "start": "micro index.js -p 4000"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
     "cors": "^2.8.3",
     "express-graphql": "^0.6.6",
     "graphql": "^0.10.1",
+    "graphql-type-json": "^0.1.4",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "micro": "^7.3.3",
